--- a/details.html
+++ b/details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Greatest Of All Time</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
           class="navbar-brand"
           href="#"
           style="color: #f84464 !important; font-weight: bold"
-          >bookMyshow</a
+          >TicketsBay</a
         >
         <button
           class="navbar-toggler"
@@ -75,26 +75,25 @@
     </nav>
 
     <div class="container mt-4">
-      <!-- <h1 class="text-center mb-4" id="movieTitle">Indian 2</h1> -->
+      <!-- <h1 class="text-center mb-4" id="movieTitle">The Greatest Of All Time</h1> -->
       <div id="movieDetails" class="row">
         <div style="color: #fff; padding: 0px">
           <div class="container">
             <div class="row">
               <div class="col-md-4">
                 <img
-                  src="https://assets-in.bmscdn.com/iedb/movies/images/website/poster/large/vettaiyan-et00379391-1727938465.jpg"
-                  alt=""
+                  src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/the-greatest-of-all-time-et00401439-1725014428.jpg"
                   class="img-fluid mb-4"
                   style="max-width: 100%; height: 100%; object-fit: cover"
                 />
               </div>
               <div class="col-md-8">
                 <div style="color: black; padding: 0px">
-                  <h1 class="mb-4">Indian 2</h1>
-                  <h4 class="mb-4">Director : Shankar</h4>
-                  <h4 class="mb-4">Genre : Drama</h4>
+                  <h1 class="mb-4">The Greatest Of All Time</h1>
+                  <h4 class="mb-4">Director : Venkat Prabhu</h4>
+                  <h4 class="mb-4">Genre : Action/Thriller</h4>
                   <h2>About the movie</h2>
-                  <p>This is a Good Film</p>
+                  <p>Consequences of an unknown past haunt the present of a special anti-terrorist squad. How will they confront it?</p>
                 </div>
               </div>
             </div>
