--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Booking Application</title>
+    <title>Movie Tickets, Shows, Plays, Sports, Events near you - TicketsBay</title>
     <!-- Initialize Bootstrap  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
           class="navbar-brand"
           href="#"
           style="color: #f84464 !important; font-weight: bold"
-          >bookMyshow</a
+          >Ticketsbay</a
         >
         <button
           class="navbar-toggler"
@@ -83,8 +83,8 @@
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
+              <h5 class="card-title">Vettaiyan</h5>
+              <p class="card-text">Action/Drama</p>
             </div>
           </div>
         </div>
@@ -92,38 +92,12 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
-              src="https://assets-in.bmscdn.com/iedb/movies/images/website/poster/large/sattam-en-kayil-et00412489-1726743894.jpg"
+              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/martin-et00328827-1677137256.jpg"
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-              src="https://assets-in.bmscdn.com/iedb/movies/images/website/poster/large/hitler-et00413125-1727093184.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/joker-folie-a-deux-et00352820-1727168074.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
+              <h5 class="card-title">Martin</h5>
+              <p class="card-text">Action/Drama/Thriller</p>
             </div>
           </div>
         </div>
@@ -135,8 +109,34 @@
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
+              <h5 class="card-title">The Greatest Of All Time</h5>
+              <p class="card-text">Action/Drama/Thriller</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+          <div class="card" style="cursor: pointer">
+            <img
+              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/lubber-pandhu-et00409924-1725002124.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Lubber Pandhu</h5>
+              <p class="card-text">Drama/Romantic/Sports</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+          <div class="card" style="cursor: pointer">
+            <img
+              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/leo-et00351731-1675663884.jpg"
+              alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title">Leo</h5>
+              <p class="card-text">Action/Thriller</p>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
+              <h5 class="card-title">Vaazhai</h5>
               <p class="card-text">Drama</p>
             </div>
           </div>
@@ -161,8 +161,8 @@
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
+              <h5 class="card-title">Meiyazhagan</h5>
+              <p class="card-text">Comedy, Drama</p>
             </div>
           </div>
         </div>
@@ -170,12 +170,12 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/bigil-et00105457-1667802781.jpg"
+              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/jailer-et00331686-1664432415.jpg"
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Indian 2</h5>
-              <p class="card-text">Drama</p>
+              <h5 class="card-title">Jailer</h5>
+              <p class="card-text">Action</p>
             </div>
           </div>
         </div>
@@ -194,7 +194,7 @@
                     <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Book My Show
+                            TicketsBay
                         </h6>
                         <p>
                             Your go-to platform for booking movie tickets, finding showtimes, and exploring the latest
@@ -228,9 +228,9 @@
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
-                        <p>123 Movie Lane, Cinema City, NY 10012, US</p>
+                        <p>29/62, Kodambakkam, Chennai-600015</p>
                         <p>
-                            support@bookmyshow.com
+                            support@ticketsbay.com
                         </p>
                         <p>+1 234 567 8900</p>
                         <p>+1 234 567 8901</p>
@@ -244,7 +244,7 @@
 
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2024 Book My Show:
+            © 2024 TicketsBay:
             <a class="text-reset fw-bold" href="https://www.bookmyshow.com/">bookmyshow.com</a>
         </div>
         <!-- Copyright -->
