--- a/index.html
+++ b/index.html
@@ -11,69 +11,43 @@
     />
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: #333"
-    >
-      <div class="container">
-        <a
-          class="navbar-brand"
-          href="#"
-          style="color: #f84464 !important; font-weight: bold"
-          >Ticketsbay</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Movies</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Stream</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Events</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Plays</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Sports</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" style="color: #fff !important"
-                >Activities</a
-              >
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              type="search"
-              class="form-control me-2"
-              placeholder="Search for Movies, Events, Plays"
-            />
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #050505">
+  <div class="container">
+    <a class="navbar-brand" href="#" style="color: #ffffff !important; font-weight: bold">
+      <img src="logo.png" alt="Ticketsbay Logo" style="width: 50px; height: 50px; margin-right: 0px;" />
+    Ticketsbay
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Movies</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Stream</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Plays</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Sports</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" style="color: #fff !important">Activities</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input type="search" class="form-control me-2" placeholder="Search for Movies, Events, Plays" />
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
     <div class="container mt-4">
       <div id="movieCards" class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
