--- a/index.html
+++ b/index.html
@@ -9,13 +9,33 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Norwester&display=swap" rel="stylesheet">
+    <style>
+      .navbar-brand {
+        font-family: 'Norwester', sans-serif; /* Apply Norwester font */
+        color: #ffffff !important; /* Ensure text is white */
+        font-weight: bold; /* Bold font weight */
+      }
+      .rounded-image {
+      border-radius: 15px; /* Adjust the value as needed */
+      overflow: hidden; /* Ensures the corners are rounded properly */
+      border: none; /* Remove any borders */
+      box-shadow: none; /* Remove any box shadow */
+      display: block; /* Ensures images are displayed properly */
+      width: 100%; /* Makes sure the image fits the card */
+      height: auto; /* Maintains the aspect ratio */
+    }
+
+    .card {
+      border: none; /* Remove the card border if there is any */
+      box-shadow: none; /* Remove any box shadow */
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #050505">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000">
   <div class="container">
     <a class="navbar-brand" href="#" style="color: #ffffff !important; font-weight: bold">
-      <img src="logo.png" alt="Ticketsbay Logo" style="width: 50px; height: 50px; margin-right: 0px;" />
-    Ticketsbay
+      <img src="TicketsBay.png" alt="Ticketsbay Logo" style="width: 180px; height: 50px; margin-right: -7px; margin-top: -5px;" />
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
@@ -53,6 +73,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+              class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/website/poster/large/vettaiyan-et00379391-1727938465.jpg"
               alt=""
             />
@@ -66,6 +87,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+              class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/martin-et00328827-1677137256.jpg"
               alt=""
             />
@@ -79,6 +101,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+              class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/the-greatest-of-all-time-et00401439-1725014428.jpg"
               alt=""
             />
@@ -92,6 +115,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+            class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/lubber-pandhu-et00409924-1725002124.jpg"
               alt=""
             />
@@ -105,6 +129,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+            class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/leo-et00351731-1675663884.jpg"
               alt=""
             />
@@ -118,6 +143,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+            class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/vaazhai-et00408594-1724233930.jpg"
               alt=""
             />
@@ -131,6 +157,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+            class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/meiyazhagan-et00405427-1721627107.jpg"
               alt=""
             />
@@ -144,6 +171,7 @@
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
+            class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/jailer-et00331686-1664432415.jpg"
               alt=""
             />
