--- a/index.html
+++ b/index.html
@@ -3,181 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Tickets, Shows, Plays, Sports, Events near you - TicketsBay</title>
+    <title>Movie Booking Application</title>
     <!-- Initialize Bootstrap  -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Norwester&display=swap" rel="stylesheet">
-    <style>
-      .navbar-brand {
-        font-family: 'Norwester', sans-serif; /* Apply Norwester font */
-        color: #ffffff !important; /* Ensure text is white */
-        font-weight: bold; /* Bold font weight */
-      }
-      .rounded-image {
-      border-radius: 15px; /* Adjust the value as needed */
-      overflow: hidden; /* Ensures the corners are rounded properly */
-      border: none; /* Remove any borders */
-      box-shadow: none; /* Remove any box shadow */
-      display: block; /* Ensures images are displayed properly */
-      width: 100%; /* Makes sure the image fits the card */
-      height: auto; /* Maintains the aspect ratio */
-    }
-
-    .card {
-      border: none; /* Remove the card border if there is any */
-      box-shadow: none; /* Remove any box shadow */
-    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000">
-  <div class="container">
-    <a class="navbar-brand" href="#" style="color: #ffffff !important; font-weight: bold">
-      <img src="TicketsBay.png" alt="Ticketsbay Logo" style="width: 180px; height: 50px; margin-right: -7px; margin-top: -5px;" />
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Movies</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Stream</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Plays</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Sports</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" style="color: #fff !important">Activities</a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input type="search" class="form-control me-2" placeholder="Search for Movies, Events, Plays" />
-        <button class="btn btn-outline-light" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark"
+      style="background-color: #333"
+    >
+      <div class="container">
+        <a
+          class="navbar-brand"
+          href="#"
+          style="color: #f84464 !important; font-weight: bold"
+          >bookMyshow</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Movies</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Stream</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Events</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Plays</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Sports</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: #fff !important"
+                >Activities</a
+              >
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              type="search"
+              class="form-control me-2"
+              placeholder="Search for Movies, Events, Plays"
+            />
+            <button class="btn btn-outline-light" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <div class="container mt-4">
       <div id="movieCards" class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
           <div class="card" style="cursor: pointer">
             <img
-              class="rounded-image"
               src="https://assets-in.bmscdn.com/iedb/movies/images/website/poster/large/vettaiyan-et00379391-1727938465.jpg"
               alt=""
             />
             <div class="card-body">
-              <h5 class="card-title">Vettaiyan</h5>
-              <p class="card-text">Action/Drama</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-              class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/martin-et00328827-1677137256.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Martin</h5>
-              <p class="card-text">Action/Drama/Thriller</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-              class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/the-greatest-of-all-time-et00401439-1725014428.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">The Greatest Of All Time</h5>
-              <p class="card-text">Action/Drama/Thriller</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-            class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/lubber-pandhu-et00409924-1725002124.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Lubber Pandhu</h5>
-              <p class="card-text">Drama/Romantic/Sports</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-            class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/leo-et00351731-1675663884.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Leo</h5>
-              <p class="card-text">Action/Thriller</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-            class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/vaazhai-et00408594-1724233930.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Vaazhai</h5>
+              <h5 class="card-title">Indian 2</h5>
               <p class="card-text">Drama</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-            class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/meiyazhagan-et00405427-1721627107.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Meiyazhagan</h5>
-              <p class="card-text">Comedy, Drama</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-          <div class="card" style="cursor: pointer">
-            <img
-            class="rounded-image"
-              src="https://assets-in.bmscdn.com/iedb/movies/images/mobile/thumbnail/xlarge/jailer-et00331686-1664432415.jpg"
-              alt=""
-            />
-            <div class="card-body">
-              <h5 class="card-title">Jailer</h5>
-              <p class="card-text">Action</p>
             </div>
           </div>
         </div>
@@ -196,7 +103,7 @@
                     <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            TicketsBay
+                            Book My Show
                         </h6>
                         <p>
                             Your go-to platform for booking movie tickets, finding showtimes, and exploring the latest
@@ -230,9 +137,9 @@
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                         <!-- Links -->
                         <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
-                        <p>29/62, Kodambakkam, Chennai-600015</p>
+                        <p>123 Movie Lane, Cinema City, NY 10012, US</p>
                         <p>
-                            support@ticketsbay.com
+                            support@bookmyshow.com
                         </p>
                         <p>+1 234 567 8900</p>
                         <p>+1 234 567 8901</p>
@@ -246,10 +153,12 @@
 
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2024 TicketsBay:
+            © 2024 Book My Show:
             <a class="text-reset fw-bold" href="https://www.bookmyshow.com/">bookmyshow.com</a>
         </div>
         <!-- Copyright -->
     </footer>
+    <script src="./script.js"></script>
+
   </body>
 </html>
