--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <body>
     <nav
       class="navbar navbar-expand-lg navbar-dark"
-      style="background-color: #333"
+      style="background-color: #000000"
     >
       <div class="container">
         <a
           class="navbar-brand"
           href="#"
-          style="color: #f84464 !important; font-weight: bold"
-          >bookMyshow</a
-        >
+          style="color: #ffffff !important; font-weight: bold"
+          >
+          <img src="TicketsBay.png" alt="Ticketsbay Logo" style="width: 170px; height: 50px; margin-right: -5px; margin-top: -5px;" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -103,7 +103,7 @@
                     <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
                         <!-- Content -->
                         <h6 class="text-uppercase fw-bold mb-4">
-                            Book My Show
+                            TicketsBay
                         </h6>
                         <p>
                             Your go-to platform for booking movie tickets, finding showtimes, and exploring the latest
@@ -139,7 +139,7 @@
                         <h6 class="text-uppercase fw-bold mb-4">Contact Us</h6>
                         <p>123 Movie Lane, Cinema City, NY 10012, US</p>
                         <p>
-                            support@bookmyshow.com
+                            support@ticketsbay.com
                         </p>
                         <p>+1 234 567 8900</p>
                         <p>+1 234 567 8901</p>
@@ -153,7 +153,7 @@
 
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2024 Book My Show:
+            © 2024 TicketsBay:
             <a class="text-reset fw-bold" href="https://www.bookmyshow.com/">bookmyshow.com</a>
         </div>
         <!-- Copyright -->
